--- a/dentko/sass/style.sass
+++ b/dentko/sass/style.sass
@@ -1,17 +1,47 @@
 $green_gradient: linear-gradient(90.06deg, #0DC180 0%, #04B474 100%)
 $green: #0DC180
+$soft_blue: #ECF2F9
 
 
 *, *::before, *::after
     transition: all .2s ease-in-out 0s
     font-family: 'Geometria', sans-serif
 
-.green-link, .green-link:hover
+body
+    display: flex
+    flex-direction: column
+
+.green-link
     color: $green
-    text-decoration: none
+    display: inline-block
+    position: relative
+    font-size: 12px
+    &::after
+        content: ''
+        display: inline-block
+        background-size: cover
+        background-repeat: no-repeat
+        background-position: center center
+        background-image: url(../img/arrow-h.png)
+        height: 8px
+        width: 6px
+        margin-left: 5px
+    &:hover
+        text-decoration: none
+        color: $green
+        &::after
+            width: 10px
+            background-image: url(../img/inline-arrow.svg)
+
+.mw
+    &_no
+        max-width: none !important
+    &_550
+        max-width: 550px !important
 
 .header
     padding: 20px 0px
+    flex-grow: 0
     &__wrap
         dt
             font-size: 11px
@@ -19,6 +49,8 @@ $green: #0DC180
             font-size: 14px
             font-weight: 500
             color: #2F3241
+        dd.uk-flex
+            margin-top: 3px
         .uk-description-list
             margin-top: 0
             margin-bottom: 0
@@ -35,17 +67,38 @@ $green: #0DC180
         max-width: 26px
         &:hover
             transform: scale(1.1)
+    &__dropdown
+        position: relative
+        &::after
+            content: ''
+            display: inline-block
+            width: 20px
+            height: 10px
+            margin: 0px 10px 0px 2px
+            background-image: url(../img/arrow-h.png)
+            background-size: contain
+            background-repeat: no-repeat
+            background-position: center center
+            transform: rotate(90deg)
+        &-container
+            .footer__dd-link
+                display: inline-block
+                white-space: nowrap
+    .uk-navbar-dropdown-nav
+        a img
+            max-width: 10px
 
 .nav
     background: $green_gradient
     box-shadow: inset 0px 10px 30px rgba(21, 36, 45, 0.15)
+    flex-grow: 0
     .uk-navbar-nav
         width: 100%
         &>li>a
             color: #fff
             display: inline-block
             position: relative
-            font-weight: bold
+            font-weight: 600
             font-size: 12px
             line-height: 14px
             min-height: auto
@@ -98,13 +151,23 @@ $green: #0DC180
             padding: 8px 30px
             display: inline-block
             width: 100%
+            img
+                max-width: 10px
+                transform: translateY(-2px)
+                margin-right: 3px
+                width: 0
             &:hover
                 color: #fff
                 background: $green_gradient
+                img
+                    width: auto
 
     .uk-navbar-dropdown
         overflow: hidden
         padding: 0
+
+.main
+    flex-grow: 1
 
 .uk-h1
     font-family: 'Geometria', sans-serif
@@ -167,6 +230,7 @@ $green: #0DC180
     background-color: rgba(255, 255, 255, .8)
 
 .benefit
+    position: relative
     &__head
         max-width: 260px
     &__header
@@ -175,10 +239,21 @@ $green: #0DC180
         font-size: 18px
     &__img
         margin-right: 20px
+    &:hover
+        .uk-card
+            opacity: 1
+            transform: translateY(0px)
+            transition: all .2s ease-out 0s
+            visibility: visible
     .uk-card
         background-color: #fff
-        bottom: 0 !important
-        max-height: 300px
+        bottom: -32px
+        opacity: 0
+        position: absolute
+        width: 285px
+        transition: all .2s ease-out 0s
+        transform: translateY(-10px)
+        visibility: hidden
         &-body
             padding: 30px 20px
             .benefit__head
@@ -187,6 +262,9 @@ $green: #0DC180
 .about
     .uk-list
         list-style-image: url(../img/list-img.png)
+        .uk-list
+            margin-left: 2em
+            list-style-image: url(../img/swoosh.png)
     h2.uk-h1
         position: relative
         &::after
@@ -198,6 +276,13 @@ $green: #0DC180
             bottom: 4px
             left: 0
             background-color: $green
+    .button
+        img
+            display: none
+        &:hover
+            padding-left: 15px
+            img
+                display: inline-block
     &__img
         border-radius: 3px
         &-wrap
@@ -212,6 +297,9 @@ $green: #0DC180
                 transform: translate(-30px, -30px)
                 background: $green_gradient
                 z-index: -1
+            &_another
+                &::before
+                    transform: translate(90px, -30px)
 
 .uk-h2
     font-weight: bold
@@ -222,13 +310,22 @@ $green: #0DC180
     .uk-card
         background-color: #F6F9FB
         box-shadow: none
-        max-width: 265px
     .uk-card-title
         text-align: center
         font-size: 18px
         font-weight: bold
     .uk-slider-items
         margin-top: 40px
+    li
+        img
+            width: 100%
+            height: auto
+
+.gallery
+    margin: 50px 0px 120px
+    &__photos
+        img + img
+            margin-left: 30px
 
 .form
     margin-top: 40px
@@ -302,6 +399,30 @@ $green: #0DC180
         .uk-input + .uk-input
                 margin-left: 10px
 
+.action
+    box-shadow: 0px 4px 50px rgba(20, 43, 61, 0.15)
+    border-radius: 3px
+    & + &
+        margin-left: 30px
+    &__wrap
+        margin-top: 30px
+    &__header
+        color: $green
+        font-size: 14px
+        font-weight: 500
+    &__title
+        color: $green
+        font-size: 24px
+        font-weight: 900
+        text-transform: uppercase
+        margin: 0
+    &__percentage
+        color: $green
+        font-size: 54px
+        font-weight: 900
+        text-transform: uppercase
+        line-height: 50px
+
 .portfolio
     .uk-card
         box-shadow: none
@@ -343,11 +464,120 @@ $green: #0DC180
             color: #fff
             opacity: .4
 
+.text
+    &__item
+        padding-left: 20px
+        position: relative
+        &::before
+            content: ''
+            display: inline-block
+            position: absolute
+            top: 0
+            left: -5px
+            height: 20px
+            width: 20px
+            background-image: url(../img/list-img.png)
+            background-size: contain
+            background-repeat: no-repeat
+            background-position: center
+    &_fullscreen
+        padding: 120px 0px
+        .uk-h1
+            position: relative
+            margin-bottom: 30px
+            &::after
+                content: ''
+                display: inline-block
+                width: 40px
+                height: 5px
+                position: absolute
+                bottom: -10px
+                left: 0
+                background-color: $green
+    .uk-column-1-2
+        margin-top: 30px
+
+.colored_text
+    &__body
+        padding: 80px 100px
+        background-color: $soft_blue
+        img
+            max-width: 100px
+            height: auto
+            margin-right: 70px
+        .uk-text
+            line-height: 24px
+
+.accordion
+    &__content-item
+        padding: 25px
+        background-color: #fff
+        & + &
+            border-top: 1px solid $soft_blue
+    .uk-accordion-title
+        background-color: $soft_blue
+        padding: 25px 30px
+    li.uk-open
+        position: relative
+        z-index: 2
+        box-shadow: 0px 4px 50px rgba(20, 43, 61, 0.15)
+
+.reviews
+    padding-bottom: 120px
+    &__slider
+        margin-top: 50px
+    .uk-slider-container
+        max-width: 1140px
+        flex-grow: 1
+    .uk-slider-items
+        padding: 20px
+        li
+            margin: 0 20px
+    .uk-card
+        box-shadow: 0 5px 12px rgba(0,0,0,.15)
+
+.review
+    border-radius: 3px
+    &__head
+        padding-bottom: 10px
+    &__bottom
+        padding-top: 10px
+    &__name
+        font-weight: bold
+        font-size: 18px
+        line-height: 22px
+        margin-bottom: 0
+    &__body
+        position: relative
+        max-width: 810px
+        &::before, &::after
+            content: ''
+            display: inline-block
+            width: 20px
+            height: 15px
+            position: absolute
+            background-image: url(../img/quotes.png)
+            background-size: contain
+            background-repeat: no-repeat
+            background-position: center center
+        &::before
+            left: 0
+            top: 0
+            transform: translate(-120%, -100%)
+        &::after
+            right: 0
+            bottom: 0
+            transform: translate(120%, 90%) rotate(180deg)
+    .uk-text-small
+        font-size: 14px
+        line-height: 20px
+
 .button
     width: auto !important
     flex: unset !important
     border-radius: 3px
     background: $green_gradient
+    border: none
     color: #ffffff
     font-weight: bold
     font-size: 14px
@@ -360,9 +590,39 @@ $green: #0DC180
         opacity: 0
     &:hover
         color: #ffffff
-        box-shadow: none
+        border: none
         img
             opacity: 1
+    &_transparent
+        background: transparent
+        border: 1px solid $green
+        color: $green
+        &:hover
+            background: $green_gradient
+            border: 1px solid $green
+            color: #ffffff
+
+.banner
+    padding: 140px 0px
+    .button
+        padding: 10px 26px
+    .button + .button
+        margin-left: 10px
+
+.price
+    margin-bottom: 120px
+    &__list
+        margin-top: 50px
+    &__item
+        padding: 25px
+        background-color: $soft_blue
+        & + &
+            margin-top: 10px
+        .uk-text
+            max-width: 900px
+    &__price
+        white-space: nowrap
+        color: $green
 
 .more
     background: linear-gradient(100.48deg, #F1F6FC 0%, #EAF0F8 100%)
@@ -414,29 +674,7 @@ $green: #0DC180
             img
                 width: 100%
                 height: auto
-
-.more, .portfolio
-    .uk-link
-        color: $green
-        display: inline-block
-        position: relative
-        font-size: 12px
-        &::after
-            content: ''
-            display: inline-block
-            background-size: cover
-            background-repeat: no-repeat
-            background-position: center center
-            background-image: url(../img/arrow-h.png)
-            height: 8px
-            width: 6px
-            margin-left: 5px
-        &:hover
-            text-decoration: none
-            &::after
-                width: 10px
-                background-image: url(../img/inline-arrow.svg)
-
+      
 .agit
     background: $green_gradient
     padding: 50px 0px
@@ -470,6 +708,7 @@ $green: #0DC180
 
 .footer
     padding: 50px 0px 25px
+    flex-grow: 0
     &__nav
         flex-basis: 83%
         &-link
