--- a/verter_app/sass/style.sass
+++ b/verter_app/sass/style.sass
@@ -29,8 +29,15 @@ $main_yellow: #faf406
     display: flex
     justify-content: center
     align-items: center
-    min-height: 100vh
     transition-duration: 0s
+    background-color: #fff
+    background-image: url(../img/main_bg.jpg)
+    background-repeat: no-repeat
+    background-size: cover
+    background-position: center center
+    position: relative
+    flex-direction: column
+    min-height: 120vh
 
 .global__wrapper
     overflow-x: hidden
@@ -285,7 +292,7 @@ $main_yellow: #faf406
             .table__col-span-superbig
                 text-align: center
         &_remove
-            transform: translateX(-275px)
+            transform: translateX(-30%)
        
     &__col
         display: flex
