--- a/dentko/sass/style.sass
+++ b/dentko/sass/style.sass
@@ -174,6 +174,7 @@ body
     font-size: 40px
     font-weight: 700
     letter-spacing: 0.01em
+    margin-bottom: 0
 
 .slider
     max-height: 660px
@@ -304,6 +305,7 @@ body
 .uk-h2
     font-weight: bold
     font-size: 40px
+    margin-bottom: 0
 
 .services
     padding-bottom: 80px
@@ -347,57 +349,77 @@ body
             width: 100%
         &:hover
             color: #fff
-            text-decoration: none   
+            text-decoration: none
+    &__inputs
+        flex-basis: 80%
     &__body
         padding: 80px 100px 100px
         background: $green_gradient
         border-radius: 3px
-        .uk-h2, .uk-text-meta
+    .uk-h2, .uk-text-meta
+        color: #fff
+        margin: 0
+    .uk-text-meta
+        margin-bottom: 20px
+    .uk-input, .form__textarea
+        font-size: 14px
+        line-height: 20px
+        padding: 16px 10px
+        background-color: transparent
+        border-radius: 3px
+        line-height: 20px
+        border: none
+        display: inline-block
+        height: auto
+        &::placeholder
+            color: #ffffff7e
+        &:not([type="submit"])
             color: #fff
-            margin: 0
-        .uk-text-meta
-            margin-bottom: 20px
-        .uk-input
-            font-size: 14px
-            line-height: 20px
+            box-shadow: inset 0px 0px 50px rgba(0, 0, 0, 0.15)
+        &[type="submit"]
+            background-color: #fff
             padding: 16px 10px
-            background-color: transparent
-            border-radius: 3px
-            line-height: 20px
-            border: none
-            display: inline-block
-            height: auto
-            &::placeholder
-                color: #ffffff7e
-            &:not([type="submit"])
-                color: #fff
-                box-shadow: inset 0px 0px 50px rgba(0, 0, 0, 0.15)
-            &[type="submit"]
-                background-color: #fff
-                padding: 16px 10px
-                max-width: 200px
-                line-height: 18px
-                font-weight: bold
-                color: #686b79
+            max-width: 200px
+            line-height: 18px
+            font-weight: bold
+            color: #686b79
+            &::after
+                display: none
+                content: ''
+                background-image: url(../img/inline-arrow.svg)
+                background-size: contain
+                background-repeat: no-repeat
+                background-position: center center
+                height: 10px
+                width: 10px
+                margin-left: 5px
+                vertical-align: middle
+            &:hover
+                cursor: pointer
+                color: $green
+                padding: 16px 5px
                 &::after
-                    display: none
-                    content: ''
-                    background-image: url(../img/inline-arrow.svg)
-                    background-size: contain
-                    background-repeat: no-repeat
-                    background-position: center center
-                    height: 10px
-                    width: 10px
-                    margin-left: 5px
-                    vertical-align: middle
-                &:hover
-                    cursor: pointer
-                    color: $green
-                    padding: 16px 5px
-                    &::after
-                        display: inline-block
-        .uk-input + .uk-input
-                margin-left: 10px
+                    display: inline-block
+    .uk-input + .uk-input
+        margin-left: 10px
+    &__row
+        & + &
+            margin-top: 10px
+    &__submit
+        margin-left: 30px
+        max-width: 220px
+        padding-bottom: 5px
+        .uk-text-small
+            font-size: 10px
+            color: #ffffff
+            opacity: .7
+            line-height: 12px
+    .form__textarea
+        transition-duration: 0s
+        width: 100%
+        height: 100%
+        display: inline-block
+        box-sizing: border-box
 
 .action
     box-shadow: 0px 4px 50px rgba(20, 43, 61, 0.15)
@@ -524,8 +546,13 @@ body
 
 .reviews
     padding-bottom: 120px
+    &_page
+        padding-top: 120px
     &__slider
         margin-top: 50px
+    &__wrap
+        margin-top: 120px
+    
     .uk-slider-container
         max-width: 1140px
         flex-grow: 1
@@ -533,11 +560,10 @@ body
         padding: 20px
         li
             margin: 0 20px
-    .uk-card
-        box-shadow: 0 5px 12px rgba(0,0,0,.15)
 
 .review
     border-radius: 3px
+    box-shadow: 0 5px 12px rgba(0,0,0,.15)
     &__head
         padding-bottom: 10px
     &__bottom
@@ -568,6 +594,13 @@ body
             right: 0
             bottom: 0
             transform: translate(120%, 90%) rotate(180deg)
+    &__page
+        box-shadow: none
+        padding-right: 70px
+        &:last-child
+            border-bottom: 1px solid #CFD5DC
+        & + &
+            border-top: 1px solid #CFD5DC
     .uk-text-small
         font-size: 14px
         line-height: 20px
