--- a/dentko/sass/style.sass
+++ b/dentko/sass/style.sass
@@ -10,6 +10,7 @@ $soft_blue: #ECF2F9
 body
     display: flex
     flex-direction: column
+    overflow-x: hidden
 
 .green-link
     color: $green
@@ -54,13 +55,6 @@ body
         .uk-description-list
             margin-top: 0
             margin-bottom: 0
-        .uk-inline
-            span
-                img
-                    vertical-align: middle
-                    height: 15px
-                    width: 15px
-                    margin-right: 5px
     &__link + &__link
         margin-left: 8px
     &__link
@@ -84,6 +78,46 @@ body
             .footer__dd-link
                 display: inline-block
                 white-space: nowrap
+        &-trigger
+            &:hover .header__dropdown-card
+                display: block
+        &-span img
+            vertical-align: middle
+            height: 20px
+            width: 20px
+            margin-left: 10px
+        &-card
+            position: absolute
+            z-index: 10
+            background-color: #fff
+            top: 52%
+            transform: translateX(4px)
+            display: none
+            box-shadow: 0px 4px 50px rgba(20, 43, 61, 0.15)
+            &::before
+                content: ''
+                display: inline-block
+                height: 40px
+                width: 40px
+                border-radius: 50%
+                background-color: #fff
+                position: absolute
+                left: 50%
+                top: 0
+                transform: translate(-50%, -50%)
+            &::after
+                content: ''
+                display: inline-block
+                height: 20px
+                width: 20px
+                background-image: url(../img/info.svg)
+                background-position: center center
+                background-repeat: no-repeat
+                background-size: contain
+                position: absolute
+                left: 50%
+                top: 0
+                transform: translate(-50%, -50%)
     .uk-navbar-dropdown-nav
         a img
             max-width: 10px
@@ -129,13 +163,14 @@ body
             font-size: 12px
             overflow: hidden
             margin-top: 4px
+            border-radius: 3px
             img
                 transform: translateY(-2px)
                 display: none
             &:hover
                 color: $green
-                padding-left: 5px
-                border-radius: 3px
+                padding-left: 16px
+                padding-right: 7px
                 img
                     width: 10px
                     height: auto
@@ -217,6 +252,8 @@ body
             background-image: url(../img/inline-arrow-w.svg)
         &.uk-invisible
             display: none
+    &__controls
+        width: 22%
     &-prev
         &::after
             transform: translate(-50%, -50%) rotate(180deg)
@@ -281,9 +318,21 @@ body
         img
             display: none
         &:hover
-            padding-left: 15px
+            padding-left: 30px
+            padding-right: 12px
             img
                 display: inline-block
+    &_padding
+        padding-top: 100px
+    &__section
+        &-header
+            font-size: 18px
+    &__links
+        margin-top: 20px
+    &__link
+        color: $green
+        &:hover
+            color: $green
     &__img
         border-radius: 3px
         &-wrap
@@ -332,6 +381,10 @@ body
 .form
     margin-top: 40px
     margin-bottom: 50px
+    &_fullscreen
+        background: $green_gradient
+        .form__body
+            background: none !important
     &__schedule
         color: #fff
         white-space: nowrap
@@ -446,6 +499,7 @@ body
         line-height: 50px
 
 .portfolio
+    padding-top: 120px
     .uk-card
         box-shadow: none
     .uk-card + .uk-card
@@ -475,6 +529,8 @@ body
         line-height: 20px
         color: #737578
         margin: 0
+    &__title
+        margin-bottom: 50px
     &__img
         &-wrap
         &-meta
@@ -545,14 +601,14 @@ body
         box-shadow: 0px 4px 50px rgba(20, 43, 61, 0.15)
 
 .reviews
-    padding-bottom: 120px
-    &_page
-        padding-top: 120px
+    padding-top: 120px
+    padding-bottom: 90px
     &__slider
         margin-top: 50px
     &__wrap
         margin-top: 120px
-    
+    &__pagination
+        margin-top: 50px
     .uk-slider-container
         max-width: 1140px
         flex-grow: 1
@@ -560,6 +616,61 @@ body
         padding: 20px
         li
             margin: 0 20px
+
+.doctors
+    padding-top: 70px
+    &__bg
+        bottom: 0
+        &_green
+            background: $green_gradient
+            height: 300px
+            width: 50vw
+            z-index: -1
+        &_gray
+            background-color: $soft_blue
+            height: 225px
+            width: 50vw
+            z-index: -1
+
+.doctor
+    &__data
+        padding-bottom: 50px
+    &__name, &__specialty, &__link
+        color: #ffffff
+        &:hover
+            color: #fff
+    &__name
+        font-size: 30px
+        &::after
+            display: inline-block
+            content: ''
+            height: 5px
+            width: 40px
+            background-color: #fff
+            bottom: -30px
+            left: 0
+            position: absolute
+    &__specialty
+        margin-top: 45px
+    &__link
+        margin-top: 20px
+        max-width: 150px
+        &::after
+            background-image: url(../img/arrow-h-w.png)
+        &:hover
+            &::after
+                background-image: url(../img/arrow-w.png)
+    &__img
+        img
+            max-width: 320px
+            height: auto
+            object-fit: contain
+    &__control
+        padding-bottom: 30px
+        padding-left: 30px
+        right: 0
+        bottom: 0
+        width: 50%
 
 .review
     border-radius: 3px
@@ -605,6 +716,44 @@ body
         font-size: 14px
         line-height: 20px
 
+.uk-pagination
+    a, .reviews__control, .uk-active>span
+        display: inline-block
+        border-radius: 50%
+        height: 50px
+        width: 50px
+        text-align: center
+        line-height: 50px
+        position: relative
+        color: #2F3241
+        font-size: 16px
+        font-weight: bold
+    a, .uk-active>span
+        background: $soft_blue
+    .uk-active>span
+        border: 1px solid $green
+    .reviews__control
+        background: $green_gradient
+        &_disabled
+            cursor: default
+            opacity: .35
+        &::after
+            display: inline-block
+            content: ''
+            position: absolute
+            top: 50%
+            left: 50%
+            transform: translate(-50%, -50%)
+            width: 15px
+            height: 12px
+            color: #fff
+            background-image: url(../img/inline-arrow-w.svg)
+            &.uk-invisible
+                display: none
+        &-prev
+            &::after
+                transform: translate(-50%, -50%) rotate(180deg)
+
 .button
     width: auto !important
     flex: unset !important
@@ -626,6 +775,10 @@ body
         border: none
         img
             opacity: 1
+    &_big
+        padding-top: 15px
+        padding-bottom: 15px
+        padding-right: 15px
     &_transparent
         background: transparent
         border: 1px solid $green
@@ -635,12 +788,89 @@ body
             border: 1px solid $green
             color: #ffffff
 
+.team
+    padding: 120px 0px
+    &__wrapper
+        margin-top: 50px
+        display: grid
+        grid-gap: 30px
+        grid-template-columns: repeat(2, 1fr)
+    &__member
+        display: block
+
+.member
+    background-color: $soft_blue
+    padding: 0 !important
+    border-radius: 3px
+    overflow: hidden
+    &__img
+        max-width: 265px
+        width: 100%
+        height: 100%
+        object-fit: cover
+    &__name
+        position: relative
+        &::after
+            position: absolute
+            display: inline-block
+            height: 5px
+            width: 40px
+            content: ''
+            background: $green
+            left: 0
+            bottom: -30px
+    &__body
+        padding-left: 20px
+        padding-right: 20px
+    &__row
+        dl
+            margin: 0
+        dt
+            color: #737578
+        dd
+            font-size: 14px
+            color: #2F3241
+    &:hover
+        text-decoration: none
+        box-shadow: 0px 0px 30px rgba(21, 36, 45, 0.15)
+
 .banner
     padding: 140px 0px
     .button
         padding: 10px 26px
     .button + .button
         margin-left: 10px
+
+.faqs
+    padding: 120px 0px
+    &__themes
+        margin: 50px 0px 120px
+    &__theme
+        padding: 20px
+        box-shadow: 0px 0px 30px rgba(21, 36, 45, 0.15)
+        border: 1px solid #fff
+        &-img
+        &-span
+            display: inline-block
+            margin-top: 5px
+
+.faq
+    padding: 30px 20px
+    & + &
+        border-top: 1px solid #CFD5DC
+        margin: 0
+    &:last-child
+        border-bottom: 1px solid #CFD5DC
+    &__title
+        p
+            max-width: 1020px
+            margin: 0
+
+.map
+    padding: 90px 0px 120px
+    &__item
+        margin-top: 50px
+        filter: drop-shadow(0px 4px 50px rgba(20, 43, 61, 0.15))
 
 .price
     margin-bottom: 120px
@@ -768,7 +998,6 @@ body
                 text-decoration: none
                 &::after
                     transform: scaleX(1)
-                    transform-origin: right
         ul, li
             margin: 0 !important
         ul
@@ -780,7 +1009,7 @@ body
             flex-basis: auto
         .uk-description-list
             max-width: 230px
-            max-height: 155px
+            max-height: 175px
             margin-top: 0
         dt
             font-size: 11px
@@ -816,10 +1045,69 @@ body
         color: #000
         font-size: 14px
         line-height: 20px
+        display: inline-block
+        position: relative
+        white-space: nowrap
+        & + & 
+            margin-top: 5px
+        &::after
+            display: inline-block
+            position: absolute
+            content: ''
+            left: 20px
+            bottom: 0
+            width: calc( 100% - 18px )
+            height: 1px
+            transform: scaleX(0)
+            background-color: $green
+            transform-origin: left 
         img
+            max-width: 15px
+            width: 100% !important
+            height: auto !important
+            object-fit: contain
+            margin-left: 0 !important
             margin-right: 3px
         &:hover
+            text-decoration: none
             color: #000
+            &::after
+                transform: scaleX(1)
+    &__schedule
+        position: relative
+        &::before
+            content: ''
+            display: inline-block
+            height: 40px
+            width: 40px
+            border-radius: 50%
+            background-color: $soft_blue
+            position: absolute
+            left: 50%
+            top: 0
+            transform: translate(-50%, -50%)
+        &::after
+            content: ''
+            display: inline-block
+            height: 26px
+            width: 26px
+            background-color: $soft_blue
+            background-image: url(../img/clock.png)
+            background-position: center center
+            background-repeat: no-repeat
+            background-size: contain
+            position: absolute
+            left: 50%
+            top: 0
+            transform: translate(-50%, -50%)
+    &__outer
+        height: 30px
+        width: 30px
+        max-width: none
+        img
+            object-fit: cover
+            height: 100%
+            width: 100%
     &__bottom
         &-col
             span
