--- a/dentko/sass/style.sass
+++ b/dentko/sass/style.sass
@@ -6,10 +6,14 @@ $soft_blue: #ECF2F9
 *, *::before, *::after
     transition: all .2s ease-in-out 0s
     font-family: 'Geometria', sans-serif
+    box-sizing: border-box
 
 body
     display: flex
     flex-direction: column
+    overflow-x: hidden
+
+html
     overflow-x: hidden
 
 .green-link
@@ -43,6 +47,15 @@ body
 .header
     padding: 20px 0px
     flex-grow: 0
+    position: relative
+    background-color: #fff
+    z-index: 100
+    &.fixed
+        position: fixed
+        top: 0
+        left: 0
+        width: 100%
+        padding: 10px 0px
     &__wrap
         dt
             font-size: 11px
@@ -61,6 +74,39 @@ body
         max-width: 26px
         &:hover
             transform: scale(1.1)
+    &__menu
+        &-btn
+            display: none
+            width: 30px
+            height: 30px
+            position: relative
+            border: none
+            background-color: transparent
+            padding: 0
+            span, &::before, &::after
+                width: 26px
+                height: 1px
+                background-color: $green
+                position: absolute
+                left: 50%
+                top: 50%
+                transform: translate(-50%, -50%)
+                display: inline-block
+                content: ''
+            &::before
+                transform: translate(-50%, -8px)
+            &::after
+                transform: translate(-50%, 8px)
+            &.active
+                span
+                    opacity: 0
+                &::before
+                    transform: translate(-50%, -50%) rotate(45deg)
+                &::after
+                    transform: translate(-50%, -50%) rotate(-45deg)
+    &__main-link
+        &:hover
+            transform: scale(1.05)
     &__dropdown
         position: relative
         &::after
@@ -177,7 +223,9 @@ body
                     display: inline-block
     .uk-navbar-center
         width: 100%
-        max-width: 1200px
+        max-width: 1260px
+        padding: 0px 30px
+        box-sizing: border-box
 
     .uk-navbar-dropdown-nav
         a
@@ -200,6 +248,49 @@ body
     .uk-navbar-dropdown
         overflow: hidden
         padding: 0
+
+.mobile-menu
+    position: fixed
+    left: 0
+    top: 0
+    z-index: 20
+    width: 100%
+    height: 100%
+    background-color: $green
+    transform: translateY(-100%)
+    overflow-y: auto
+    padding: 80px 20px
+    &.active
+        transform: translateY(0%)
+    .nav
+        background: none
+        box-shadow: none
+        .uk-navbar-center
+            padding: 0
+        ul
+            flex-direction: column
+            align-items: flex-start
+    .header
+        &__item
+            margin-top: 25px
+            .uk-flex, .uk-flex-inline
+                margin-top: 10px
+                max-width: 120px
+            dd, dt
+                color: #fff
+        &__dropdown
+            a
+                color: #fff
+            &-card
+                color: #000
+        &__link
+            width: 30px
+            height: 30px
+            max-width: none
+            display: inline-block
+            &-img
+                width: 100%
+                height: 100%
 
 .main
     flex-grow: 1
@@ -292,6 +383,7 @@ body
         transition: all .2s ease-out 0s
         transform: translateY(-10px)
         visibility: hidden
+        z-index: 3
         &-body
             padding: 30px 20px
             .benefit__head
@@ -311,7 +403,7 @@ body
             width: 40px
             height: 5px
             position: absolute
-            bottom: 4px
+            bottom: 0px
             left: 0
             background-color: $green
     .button
@@ -324,6 +416,8 @@ body
                 display: inline-block
     &_padding
         padding-top: 100px
+    &__section + &__section
+        margin-top: 30px
     &__section
         &-header
             font-size: 18px
@@ -333,8 +427,21 @@ body
         color: $green
         &:hover
             color: $green
+    .uk-flex
+        .about__side + .about__side
+            margin-left: 60px
     &__img
         border-radius: 3px
+        &_pa
+            bottom: 0
+            left: 50%
+            transform: translateX(-50%)
+            position: absolute
+        &-bg
+            height: 540px
+            width: 100%
+            border-radius: 3px
+            background-color: $soft_blue
         &-wrap
             position: relative
             &::before
@@ -392,23 +499,71 @@ body
         opacity: .6
         position: relative
         display: inline-block
-        span
-            margin-right: 5px
-            padding-bottom: 2px
-            border-bottom: 2px dashed #fff
+        margin-right: 5px
+        padding-bottom: 2px
+        border-bottom: 2px dashed #fff
         &::after
             content: ''
             display: inline-block
             width: 100%
         &:hover
             color: #fff
-            text-decoration: none
+            cursor: pointer
     &__inputs
         flex-basis: 80%
+        width: 100%
+    &__err
+        font-size: 10px
+        color: #ED0000
+        margin-left: 10px
+        display: none
     &__body
         padding: 80px 100px 100px
         background: $green_gradient
         border-radius: 3px
+    &__dropdown
+        &-card
+            background-color: $green
+            color: #ffffff93
+            visibility: hidden
+            opacity: 0
+            transform: translateY(-20px)
+            transition: all .2s ease-out 0s
+            right: -125px
+            top: 50%
+            box-shadow: 0px 4px 50px rgba(20, 43, 61, 0.15)
+            &::before
+                content: ''
+                display: inline-block
+                height: 40px
+                width: 40px
+                border-radius: 50%
+                background-color: $green
+                position: absolute
+                left: 50%
+                top: 0
+                transform: translate(-50%, -50%)
+            &::after
+                content: ''
+                display: inline-block
+                height: 24px
+                width: 24px
+                background-image: url(../img/info-w.svg)
+                background-position: center center
+                background-repeat: no-repeat
+                background-size: contain
+                position: absolute
+                left: 50%
+                top: 0
+                transform: translate(-35%, -50%)
+            .footer__card-header
+                color: #fff
+        &-wrap:hover
+            .form__dropdown-card
+                transition: all .2s ease-out 0s
+                visibility: visible
+                opacity: 1
+                transform: translateY(0px)
     .uk-h2, .uk-text-meta
         color: #fff
         margin: 0
@@ -467,12 +622,43 @@ body
             color: #ffffff
             opacity: .7
             line-height: 12px
+    &__spread
+        flex-basis: 100%
     .form__textarea
         transition-duration: 0s
         width: 100%
         height: 100%
         display: inline-block
         box-sizing: border-box
+    select.uk-input
+        color: #ffffff7e !important
+        
+        &:hover
+            cursor: pointer
+    .uk-input
+        option
+            color: #000
+    &__div
+        padding: 0 !important
+        box-shadow: none !important
+        position: relative !important
+        &.valid-err
+            .form__err
+                display: inline
+            .uk-input
+                border: 1px solid #ED0000
+        &.select::before
+            position: absolute
+            top: 26px
+            right: 15px
+            display: inline-block
+            content: ''
+            width: 6px
+            height: 15px 
+            transform: translate(0, -50%)
+            background-image: url(../img/select-arrows.png)
+            background-repeat: no-repeat
+            background-position: center center
 
 .action
     box-shadow: 0px 4px 50px rgba(20, 43, 61, 0.15)
@@ -665,6 +851,10 @@ body
             max-width: 320px
             height: auto
             object-fit: contain
+    &__bottom
+        display: flex
+        flex-direction: column
+        
     &__control
         padding-bottom: 30px
         padding-left: 30px
@@ -850,9 +1040,14 @@ body
         box-shadow: 0px 0px 30px rgba(21, 36, 45, 0.15)
         border: 1px solid #fff
         &-img
+            fill: #CFD5DC
         &-span
             display: inline-block
             margin-top: 5px
+        &:hover, &.active
+            border: 1px solid $green
+            .faqs__theme-img
+                fill: $green
 
 .faq
     padding: 30px 20px
@@ -917,7 +1112,16 @@ body
             height: 8px
             width: 11px
             
-
+    &__article
+        &:hover
+            box-shadow: 0px 0px 30px rgba(21, 36, 45, 0.15)
+            text-decoration: none
+            .more__button
+                border: 1px solid $green
+                background-color: $green
+                color: #fff
+                &::after
+                    display: inline-block
     .uk-card + .uk-card
         margin-left: 30px
     .uk-card
@@ -1112,3 +1316,100 @@ body
         &-col
             span
                 white-space: nowrap
+
+.popup
+    background-color: #fff
+    box-shadow: 0px 4px 50px rgba(20, 43, 61, 0.15)
+    border-radius: 3px
+    visibility: hidden
+    opacity: 0
+    transform: translateY(-50px)
+    width: 100%
+    &_request
+        padding: 80px 100px 90px
+        max-width: 1140px
+    &_sucsess
+        max-width: 620px
+        width: 100%
+        padding: 80px 80px 90px
+    &__close
+        display: inline-block
+        height: 27px
+        width: 27px
+        right: 0
+        top: 0
+        transform: translate(120%, 0%)
+        &::before, &::after
+            width: 28px
+            height: 2px
+            background-color: #fff
+            display: inline-block
+            position: absolute
+            content: ''
+            left: 50%
+            top: 50%
+        &::before
+            transform: translate(-50%, -50%) rotate(-45deg)
+        &::after
+            transform: translate(-50%, -50%) rotate(45deg)
+        &:hover
+            cursor: pointer
+            &::before
+                transform: translate(-50%, -50%) rotate(-45deg) scaleX(1.1)
+            &::after
+                transform: translate(-50%, -50%) rotate(45deg) scaleX(1.1)
+    &__wrapper
+        z-index: 1000
+        position: fixed
+        display: flex
+        justify-content: center
+        align-items: center
+        top: 0
+        left: 0
+        right: 0
+        bottom: 0
+        background-color: #2f32417e
+        visibility: hidden
+        opacity: 0
+        &.active
+            visibility: visible
+            opacity: 1
+    &__body
+        .uk-input
+            padding: 16px 10px
+            font-size: 14px
+            line-height: 20px
+            height: auto
+            border-radius: 3px
+            background: linear-gradient(100.48deg, rgba(241, 246, 252, 0.3) 0%, rgba(234, 240, 248, 0.3) 100%)
+            box-shadow: inset 0px 0px 50px rgba(0, 0, 0, 0.05)
+            border: none
+        .uk-input + .uk-input
+            margin-left: 10px
+    &__row + &__row
+        margin-top: 10px
+    &__row:last-child
+        margin-top: 25px
+    &__submit
+        color: #ffffff
+        font-size: 14px
+        line-height: 18px
+        font-weight: bold
+        padding: 17px 26px
+        background: linear-gradient(90.06deg, #0DC180 0%, #04B474 100%)
+        border-radius: 3px
+        img
+            width: 0px
+            object-fit: contain
+            margin-left: 3px
+            transform: translateY(-2px)
+            transition-duration: 0s
+        &:hover
+            padding: 17px 21px 17px 20px
+            img
+                transition-duration: 0s
+                width: 11px
+    &.active
+        visibility: visible
+        opacity: 1
+        transform: translateY(0px)
