--- a/dentko/sass/media.sass
+++ b/dentko/sass/media.sass
@@ -199,7 +199,32 @@
             img
                 max-width: 80%
 
-    .form
+    .popup
+        &__wrapper
+            overflow-y: auto
+            padding: 50px 10px 10px
+        &__close
+            transform: translate(-30%, 30%)
+            &::before, &::after
+                background-color: #000
+        &__row
+            flex-direction: column
+            align-items: center
+        &__body
+            
+            .uk-input + .uk-input
+                margin-left: 0
+                margin-top: 15px
+        textarea.uk-input
+            min-height: 100px
+        &_request
+            padding: 60px 40px
+        &_sucsess
+            padding: 50px 20px 40px
+        .form__div
+            width: 100%
+
+    .form   
         &__row
             flex-direction: column
             align-items: center
@@ -232,6 +257,37 @@
     .review
         &__info
             margin-right: 50px
+
+    .doctor-banner
+        &__wrap
+            flex-direction: column
+        &__side
+            width: 100%
+            & + &
+                display: none
+        &__title
+            margin-top: 10px
+        &__quote
+            &-wrap
+                margin: 60px 0px 20px
+                padding: 15px
+
+    .about
+        &__img-bg
+            height: 350px
+            position: relative
+            padding: 0px 10px
+            img
+                max-width: 100%
+        &__container
+            flex-direction: column
+            align-items: center
+            &>*
+                width: 100% !important
+                margin-left: 0 !important
+                margin-top: 60px
+                h2.uk-h1
+                    margin-bottom: 50px
 
     .form
         &__body
@@ -372,6 +428,14 @@
             margin-bottom: 30px
 
     .about
+        &__buttons
+            flex-direction: column
+            .button_transparent
+                margin-top: 20px
+        &__btn
+            &-wrap
+                display: flex
+                justify-content: center
         .uk-list
             padding-left: 30px
 
@@ -424,6 +488,10 @@
         &__percentage
             margin-top: 15px
             font-size: 65px
+
+    .doctor-banner
+        &__data
+            flex-direction: column
 
     .slider
         &__controls
