--- a/dom/sass/media.sass
+++ b/dom/sass/media.sass
@@ -108,8 +108,11 @@
         &__side
             & + &
                 margin-left: 0
-            &:first-child
-                margin-top: 30px
+        &__side:nth-of-type(1)
+            display: flex
+            flex-direction: column
+            align-items: center
+            margin-top: 30px
         &__link-wrap
             display: flex
             justify-content: center
@@ -165,6 +168,9 @@
             &_specter
                 margin: 30px 0 0
 
+    .partners
+        display: none
+
     .faq
         height: 60px
         &__link
@@ -204,6 +210,12 @@
                 &::after
                     display: none
 
+    .popup
+        &__body
+            padding: 40px 20px
+            .section__header
+                font-size: 24px
+
     .banner
         &__inputs
             flex-direction: column
@@ -232,8 +244,14 @@
                 padding: 20px 10px
 
     .faq
+        height: 50px
         &__link
             padding: 10px 0px
+            font-size: 12px
+        &__answer
+            margin-top: 12px
+            font-size: 12px
+            padding-bottom: 20px
 
     .subslider
         &__container
