--- a/dom/sass/style.sass
+++ b/dom/sass/style.sass
@@ -981,6 +981,7 @@ body
     &.active
         transition: all .2s ease-out 0s
         max-height: none
+        height: auto
         box-shadow: 0 0 0 2px $button_orange
         &::after
             transform: translate(0, -50%) rotate(-180deg)
@@ -1226,7 +1227,10 @@ body
             background-color: $soft_blue
 
 .popup
+    .calculate__form
+        margin-top: 0
     &__wrapper
+        padding: 10px
         position: fixed
         height: 100vh
         width: 100%
@@ -1303,8 +1307,7 @@ body
                 max-width: none
                 &-wrap
                     max-width: none
-            &__row + &__row
-                margin-top: 15px
             &__row
+                margin-top: 15px
                 display: flex
                 justify-content: center !important
