--- a/dom/sass/media.sass
+++ b/dom/sass/media.sass
@@ -153,6 +153,12 @@
                 margin-top: 20px
             flex-basis: auto
             width: 100%
+        &__col
+            flex-basis: auto
+            width: 100%
+            margin-top: 20px
+            .button_orange
+                margin-top: 20px
         &__input
             max-width: none
             &-wrap
