--- a/dom/sass/style.sass
+++ b/dom/sass/style.sass
@@ -687,6 +687,14 @@ body
             .form__input-wrap
                 max-width: none
                 padding: 0
+    &__col
+        flex-basis: 32%
+        height: 100%
+        display: flex
+        flex-direction: column
+        align-items: stretch
+        .button_orange 
+            margin-top: 18px
     &__span
         display: block
         font-weight: 300
