--- a/dom/sass/style.sass
+++ b/dom/sass/style.sass
@@ -1131,6 +1131,17 @@ body
         &-logo
             margin-top: auto
 
+.map
+    position: relative
+    width: 100%
+    height: auto
+    object-fit: cover
+    padding-bottom: 30%
+    background-image: url(../img/map.jpg)
+    background-size: cover
+    background-position: center
+    background-repeat: no-repeat
+
 .footer
     flex-grow: 0
     &__head
@@ -1179,6 +1190,7 @@ body
     font-size: 14px
     appearance: none
     display: inline-block
+    text-decoration: none
     &:hover
         cursor: pointer
     &_recall
