--- a/dentko/sass/style.sass
+++ b/dentko/sass/style.sass
@@ -466,16 +466,21 @@ html
             bottom: 0px
             left: 0
             background-color: $green
-    .button
+    .button:not(.button_transparent)
         padding-top: 10px
         padding-bottom: 10px
         img
             display: none
         &:hover
             padding-left: 30px
-            padding-right: 12px
+            padding-right: 15px
             img
                 display: inline-block
+    &__side
+        &-stiky + &-stiky
+            margin-left: 60px
+        &-stiky
+            width: 50%
     &_padding
         padding-top: 100px
     &__section + &__section
@@ -496,10 +501,9 @@ html
         width: 50%
         margin-left: 60px
     &__sticky
-        position: sticky
-        float: right
-        top: 200px
-        width: 50%
+        &.fixed
+            position: fixed
+            top: 120px
     &__flexbox
         width: 100%
         display: flex
@@ -558,6 +562,8 @@ html
     &__btn
         &-wrap
             display: flex
+    &__container
+        width: 100%
     &__row
         display: flex
         justify-content: space-between
