--- a/dom/sass/media.sass
+++ b/dom/sass/media.sass
@@ -216,6 +216,14 @@
                 &::after
                     display: none
 
+    .fixed-link
+        bottom: 30px
+        width: 40px
+        height: 40px
+        &::before, &::after
+            width: 15px
+            left: 30%
+
     .popup
         &__body
             padding: 40px 20px
@@ -246,8 +254,7 @@
             font-size: 14px
         &__input
             font-size: 14px
-            &-wrap
-                padding: 20px 10px
+            padding: 20px 10px
 
     .faq
         height: 50px
